# ESP32Tutorial

./: .gitignore  README.md  TutoriumNotes.md
SimpleTemplate/components/CModule/: CMakeLists.txt
SimpleTemplate/components/CppModule/: CMakeLists.txt  cppModule.cpp
SimpleTemplate/components/CppModule/include/: cppModule.h
SimpleTemplate/main/: hello_world_main.cpp
SimpleTemplate/unitTests/ModuleTests/: CMakeLists.txt
SimpleTemplate/unitTests/ModuleTests/tests/: cppPart.cpp
Step0-Overview/: EspressifNotes.md
Step1-HelloWorld/: README.md
Step1-HelloWorld/main/: CMakeLists.txt
Step2-HelloEditor/: README.md
Step3-HelloComponent/: README.md
Step3-HelloComponent/components/Module/: CMakeLists.txt  module.c
Step3-HelloComponent/main/: hello_world_main.c
Step4-HelloCpp/: README.md
Step4-HelloCpp/components/Module/: CMakeLists.txt  module.cpp
Step4-HelloCpp/main/: CMakeLists.txt  hello_world_main.cpp
Step5-BuildBasics/: ReadMe.md
Step5-BuildBasics/0-BareGnu/: compile.bat
Step5-BuildBasics/0-BareGnu/dynLib/: dynLib.h  util.cpp  util.h
Step5-BuildBasics/0-BareGnu/statLib/: statLib.cpp
Step5-BuildBasics/1-CMake/: CMakeLists.txt  readme.md
Step5-BuildBasics/1-CMake/app/: main.cpp  process.cpp  process.h
Step5-BuildBasics/1-CMake/dynLib/: CMakeLists.txt  dynLib.cpp
Step5-BuildBasics/1-CMake/statLib/: CMakeLists.txt  statLib.h
Step6-HelloUnitTest/: README.md
Step6-HelloUnitTest/components/CModule/: cModule.c
Step6-HelloUnitTest/components/CppModule/: cppModule.cpp
Step6-HelloUnitTest/main/: hello_world_main.cpp
(+5 files in other folders)
